terraform/ec2.tf
resource "aws_instance" "app_server" {
  ami           = "ami-0c02fb55956c7d316"  
  instance_type = "t3.micro"

  tags = {
    Name = "restaurant-ec2"
  }
}
